Add data element placeholder to index

--- a/Projects/Dashboard/index.html
+++ b/Projects/Dashboard/index.html
@@ -5,7 +5,7 @@
     <title></title>
 </head>
 <body>
-
+    <div id="data"></div>
 </body>
 <script src="data/collections.js"></script>
 <script src="data/tags.js"></script>
