Change title from worktbench with workbench

--- a/Playground/index.html
+++ b/Playground/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Wotkbench</title>
+    <title>Workbench</title>
 </head>
 <body>
 <script type="text/javascript" src="scripts/core.js"></script>
