Update training to version 3

--- a/Projects/Dashboard/index.html
+++ b/Projects/Dashboard/index.html
@@ -10,5 +10,7 @@
 <script src="data/collections.js"></script>
 <script src="data/tags.js"></script>
 <script src="data/items.js"></script>
+<script src="scripts/functions.js"></script>
+<script src="scripts/render.js"></script>
 <script src="scripts/main.js"></script>
 </html>
